--- a/sample/index.njk
+++ b/sample/index.njk
@@ -7,6 +7,7 @@
     <title>Test for SVG Contents</title>
 </head>
 <body>
+    {{ "/sample/simple.svg" | svgContents("classname") | safe }}
     {{ "/sample/simple.svg" | svgContents | safe }}
 </body>
 </html>
