Adds optional selector for usecases where you don't want to return an SVG element

--- a/sample/handlebars-test.hbs
+++ b/sample/handlebars-test.hbs
@@ -8,5 +8,6 @@
 </head>
 <body>
     {{{svgContents "/sample/simple.svg" "classname" }}}
+    {{{svgContents "/sample/symbol.svg" "" "symbol" }}}
 </body>
 </html>
