--- a/sample/index.njk
+++ b/sample/index.njk
@@ -7,7 +7,7 @@
     <title>Test for SVG Contents</title>
 </head>
 <body>
-    {{ "/sample/symbol.svg" | svgContents("classname", "symbol") | safe }}
+    {{ "/sample/symbol.svg" | svgContents("", "symbol") | safe }}
     {{ "/sample/simple.svg" | svgContents('class') | safe }}
 </body>
 </html>
